--- a/issueanalyzerByGraph.dproj
+++ b/issueanalyzerByGraph.dproj
@@ -176,6 +176,7 @@
         <None Include="ModelSupport_issueanalyzerByGraph\issueAnalizerByGraphP_bz\default.txvpck"/>
         <None Include="ModelSupport_issueanalyzerByGraph\issueanalyzerByGraph\default.txvpck"/>
         <None Include="ModelSupport_issueanalyzerByGraph\issueAnalizerByGraphP_bz\default.txaPackage"/>
+        <None Include="ModelSupport_issueanalyzerByGraph\Main\default.txvpck"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
