--- a/issueanalyzerByGraph.dproj
+++ b/issueanalyzerByGraph.dproj
@@ -195,6 +195,11 @@
             <DesignClass>TUniForm</DesignClass>
         </DCCReference>
         <DCCReference Include="issueAnalizerByGraphP_bz.pas"/>
+        <DCCReference Include="issueAnalizerByGraph_login.pas">
+            <Form>UniLoginForm1</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TUniLoginForm</DesignClass>
+        </DCCReference>
         <None Include="ModelSupport_issueanalyzerByGraph\default.txaPackage"/>
         <None Include="ModelSupport_issueanalyzerByGraph\default.txvpck"/>
         <None Include="ModelSupport_issueanalyzerByGraph\issueAnalizerByGraphP_bz\default.txvpck"/>
@@ -230,14 +235,32 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="ModelSupport_issueanalyzerByGraph\default.txaPackage" Configuration="Release" Class="ProjectFile">
+                    <Platform Name="Win64">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="ModelSupport_issueanalyzerByGraph\issueAnalizerByGraphP_bz\default.txaPackage" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="ModelSupport_issueanalyzerByGraph\issueAnalizerByGraphP_bz\default.txaPackage" Configuration="Release" Class="ProjectFile">
+                    <Platform Name="Win64">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="Win32\Debug\issueanalyzerByGraph.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
+                        <RemoteName>issueanalyzerByGraph.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win64\Release\issueanalyzerByGraph.exe" Configuration="Release" Class="ProjectOutput">
+                    <Platform Name="Win64">
                         <RemoteName>issueanalyzerByGraph.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
